--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,7 +1,88 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin '@tailwindcss/typography';
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+    *,
+    ::after,
+    ::before,
+    ::backdrop,
+    ::file-selector-button {
+        border-color: var(--color-gray-200, currentcolor);
+    }
+}
+
+/* Custom keyframes */
+@keyframes scroll {
+    to {
+        transform: translate(calc(-50% - 0.5rem));
+    }
+}
+
+@theme {
+    /* Custom animations */
+    --animate-scroll: scroll var(--animation-duration, 40s)
+        var(--animation-direction, forwards) linear infinite;
+
+    /* Custom background images */
+    --background-image-gradient-radial: radial-gradient(
+        var(--tw-gradient-stops)
+    );
+    --background-image-gradient-conic: conic-gradient(
+        from 180deg at 50% 50%,
+        var(--tw-gradient-stops)
+    );
+
+    /* Custom aspect ratio */
+    --aspect-ratio-20-17: 20 / 17;
+
+    /* Custom colors */
+    --color-gray-50: #eeeeee;
+    --color-gray-100: #d9d9d9;
+
+    --color-neutral-50: #f1f4f8;
+    --color-neutral-100: #cbd5e1;
+    --color-neutral-200: #a4b7cd;
+    --color-neutral-700: #334155;
+
+    --color-primary-50: #eff6ff;
+    --color-primary-100: #dbeafe;
+    --color-primary-200: #bfdbfe;
+    --color-primary-600: #2563eb;
+    --color-primary-700: #1d4ed8;
+
+    --color-secondary-100: #f1f5f9;
+    --color-secondary-300: #cbd5e1;
+    --color-secondary-400: #94a3b8;
+    --color-secondary-500: #64748b;
+    --color-secondary-600: #475569;
+    --color-secondary-700: #334155;
+
+    /* Custom font sizes with line heights */
+    --font-size-mb-base: 0.875rem / 1.375rem;
+    --font-size-mb-lg: 1rem / 1.5rem;
+    --font-size-mb-2xl: 1.375rem / 1.75rem;
+    --font-size-mb-3xl: 1.75rem / 2.25rem;
+    --font-size-mb-4xl: 2rem;
+    --font-size-mb-5xl: 2.675rem;
+
+    /* Custom max width */
+    --max-width-prose: 50rem;
+
+    /* Custom spacing */
+    --spacing-18: 4.5rem;
+    --spacing-136: 34rem;
+    --spacing-8xl: 90rem;
+    --spacing-4\.5: 1.125rem;
+}
 
 .p-spacing {
-    @apply px-4 sm:px-6 lg:px-8 xl:px-18 2xl:px-20
+    @apply px-4 sm:px-6 lg:px-8 xl:px-18 2xl:px-20;
 }
